--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -21,7 +21,7 @@
               </div>
               <div class="skill-mf">
                 <p class="title-s">Skills</p>
-                <span>Javascript (Node.js)</span> <span class="pull-right">90%</span>
+                <span>Javascript (Node.js)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0"
                     aria-valuemax="100"></div>
@@ -33,22 +33,22 @@
                     aria-valuemax="100"></div>
                 </div>
                 -->
-                <span>Solidity</span> <span class="pull-right">50%</span>
+                <span>Solidity</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                <span>AngularJS</span> <span class="pull-right">80%</span>
+                <span>AngularJS</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                <span>React</span> <span class="pull-right">40%</span>
+                <span>React</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                <span>Databases (SQL)</span> <span class="pull-right">70%</span>
+                <span>Databases (SQL)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                     aria-valuemax="100"></div>
