--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -16,6 +16,32 @@
     <div class="row">
       <div class="col-md-4">
         <div class="work-box">
+          <a href="/assets/img/personal-finance-1.png" data-lightbox="gallery-mf">
+          <div class="work-img">
+            <img src="/assets/img/personal-finance-1.png" alt="" class="img-fluid">
+          </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">Personal Finance</h2>
+                <div class="w-more">
+                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Feb 2020</span>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <a href="https://personal-finance.morion4000.com" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="work-box">
           <a href="/assets/img/javascript-blockchain-2.png" data-lightbox="gallery-mf">
           <div class="work-img">
             <img src="/assets/img/javascript-blockchain-2.png" alt="" class="img-fluid">
