--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -1,9 +1,19 @@
-<title>Web and Blockchain Developer - Ionut Moraru</title>
+<title>{{title}}</title>
 <meta charset="utf-8">
 
-<meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta content="software, developer, full stack, web, development, architecture" name="keywords">
-<meta content="Seasoned software developer with over ten years of experience in full-stack web development and systems architecture" name="description">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="{{description}}">
+<meta name="keywords" content="{{keywords}}">
+<meta name="author" content="Ionut Moraru">
+
+<meta property="og:title" content="{{title}}">
+<meta property="og:locale" content="en_US">
+<meta property="og:description" content="{{description}}">
+<meta property="og:url" content="{{{link}}}">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="morion4000">
+
+<link rel="canonical" href="{{{link}}}">
 
 <!-- Favicons -->
 <link href="/assets/img/favicon.png" rel="icon">
