--- a/views/partials/intro.html
+++ b/views/partials/intro.html
@@ -5,7 +5,7 @@
       <div class="container">
         <!--<p class="display-6 color-d">Hello, world!</p>-->
         <h1 class="intro-title mb-4">Hi, I'm Ionut Moraru</h1>
-        <p class="intro-subtitle"><span class="text-slider-items">Software Development,DevOps, Blockchain Development</span><strong class="text-slider"></strong></p>
+        <p class="intro-subtitle"><span class="text-slider-items">Software Developer,DevOps,Blockchain Developer</span><strong class="text-slider"></strong></p>
         <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="/assets/pdf/Ionut_Moraru_Resume_2020.pdf" target="_blank" role="button">View Resume (CV)</a></p>
       </div>
     </div>
