--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -94,6 +94,32 @@
       </div>
       <div class="col-md-4">
         <div class="work-box">
+          <a href="/assets/img/telegram-tip-bot.png" data-lightbox="gallery-mf">
+          <div class="work-img">
+            <img src="/assets/img/telegram-tip-bot.png" alt="" class="img-fluid">
+          </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">Telegram Tip Bot</h2>
+                <div class="w-more">
+                  <span class="w-ctegory">Product Development</span> / <span class="w-date">Sep. 2019</span>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <a href="https://github.com/morion4000/telegram-tip-bot" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="work-box">
           <a href="/assets/img/webdollar-1.png" data-lightbox="gallery-mf">
             <div class="work-img">
               <img src="/assets/img/webdollar-1.png" alt="" class="img-fluid">
