--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{description}}">
 <meta name="keywords" content="{{keywords}}">
-<meta name="author" content="Adrian Moraru">
+<meta name="author" content="Ionut Adrian Moraru">
 
 <meta property="og:title" content="{{title}}">
 <meta property="og:locale" content="en_US">
