--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -10,7 +10,7 @@
           <p class="subtitle-a">
             <p>This is a list with most notable <strong>personal</strong> projects.</p>
             For projects that I worked on as a consultant,
-            <br />you can check out <a href="/assets/pdf/Adrian_Moraru_Resume_2020.pdf">my resume</a> or <a href="#contact">contact me</a>.
+            <br />you can check out <a href="/assets/pdf/Ionut_Moraru_Resume_2020.pdf">my resume</a> or <a href="#contact">contact me</a>.
           </p>
           <div class="line-mf"></div>
         </div>
@@ -71,7 +71,7 @@
               </div>
             </div>
             <hr />
-            <p>Naive implementation of a Blockchain in Javascript, for learning purposes. It tries to simplify the complex technology stack and concepts of a real Blockchain.</p>
+            <p>Implementation of a Blockchain in Javascript, for learning purposes. It tries to simplify the complex technology stack and concepts of a Blockchain.</p>
           </div>
         </div>
       </div>
@@ -216,7 +216,7 @@
               </div>
             </div>
             <hr />
-            <p>WMP is an infrastructure project that runs the official WebDollar mining pool software. It also includes custom software that displays stats for miners.</p>
+            <p>WMP is an infrastructure project that runs the official WebDollar mining pool software. It also includes custom software that collects and displays stats for miners.</p>
           </div>
         </div>
       </div>
