--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -50,7 +50,7 @@
                     aria-valuemax="100"></div>
                 </div>
                 -->
-                <span>React</span>
+                <span>React.js</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="40" aria-valuemin="0"
                     aria-valuemax="100"></div>
@@ -96,7 +96,7 @@
                 </p>
 
                 <br />
-                <a class="btn btn-primary btn js-scroll px-4" href="/assets/pdf/Ionut_Moraru_Resume_2020.pdf" target="_blank" role="button">View Resume (CV)</a>
+                <a class="btn btn-primary btn js-scroll px-4" href="/resume" target="_blank" role="button">View Resume (CV)</a>
               </div>
             </div>
           </div>
