--- a/views/index.html
+++ b/views/index.html
@@ -64,8 +64,7 @@
                       <!--I am available for consulting work.-->Drop me a line if you need more information about my services or wish to get a quote.
                     </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> Crisan 25, Drobeta-Turnu Severin, Romania</li>
-                      <li><span class="ion-document"></span> MORARU F IONUT ADRIAN II, VAT: RO42586330</li>
+                      <li><span class="ion-ios-location"></span> Romania</li>
                       <li><span class="ion-email"></span> <a href="mailto:morion4000@gmail.com">morion4000@gmail.com</a></li>
                     </ul>
                   </div>
