--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -19,6 +19,35 @@
     <div class="row">
       <div class="col-md-4">
         <div class="work-box">
+          <a href="/assets/img/haunted-tower.png" data-lightbox="gallery-mf">
+          <div class="work-img">
+            <img src="/assets/img/haunted-tower.png" alt="" class="img-fluid">
+          </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">Haunted Tower</h2>
+                <div class="w-more">
+                    <span class="w-ctegory">Software Development</span><br />
+                    <span class="w-date">Jan. 2022</span>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <a href="https://www.hauntedtower.com" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <hr />
+            <p>HTML5 game written in Typescript + Phaser 3 of the Tower Defense genre. It is packaged for Android using CapacitatorJS.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="work-box">
           <a href="/assets/img/personal-finance-4.png" data-lightbox="gallery-mf">
           <div class="work-img">
             <img src="/assets/img/personal-finance-4.png" alt="" class="img-fluid">
